fga-adapter.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fga-adapter
  labels:
    app: fga-adapter
spec:
  replicas: 1
  selector:
    matchLabels:
      app: fga-adapter
  template:
    metadata:
      labels:
        app: fga-adapter
    spec:
      containers:
      - name: adapter
        image: docker.io/lmhinnel/fga-adapter:latest
        ports:
        - containerPort: 8080
        resources:
          limits:
            cpu: "200m"
            memory: "256Mi"
          requests:
            cpu: "100m"
            memory: "128Mi"
---
apiVersion: v1
kind: Service
metadata:
  name: fga-adapter
spec:
  selector:
    app: fga-adapter
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
  type: ClusterIP
