api-gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: prod-gateway
spec:
  gatewayClassName: nginx
  listeners:
    - name: http
      protocol: HTTP
      port: 80
      allowedRoutes:
        namespaces:
          from: All
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: cloud-stack-unified-route
  namespace: default
spec:
  parentRefs:
    - name: prod-gateway
  hostnames:
    - "cloud.local"
  rules:
    - matches:
        - path: { type: PathPrefix, value: /dex }
      backendRefs:
        - name: dex
          port: 5556

    - matches:
        - path: { type: PathPrefix, value: /fga }
      filters:
        - type: URLRewrite
          urlRewrite:
            path:
              type: ReplacePrefixMatch
              replacePrefixMatch: /
      backendRefs:
        - name: openfga
          port: 8080

    - matches:
        - path: { type: PathPrefix, value: /adapter }
      filters:
        - type: URLRewrite
          urlRewrite:
            path:
              type: ReplacePrefixMatch
              replacePrefixMatch: /
      backendRefs:
        - name: fga-adapter
          port: 8080
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: minio-server
  namespace: default
spec:
  parentRefs:
    - name: prod-gateway
  hostnames:
    - "minio.local"
  rules:
    - matches:
        - path: { type: PathPrefix, value: / }
      backendRefs:
        - name: minio
          port: 9000
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: minio-console
  namespace: default
spec:
  parentRefs:
    - name: prod-gateway
  hostnames:
    - "ui-minio.local"
  rules:
    - matches:
        - path: { type: PathPrefix, value: / }
      backendRefs:
        - name: minio-console
          port: 9001
